# helios

./: .dod-vidpn-types.md  .gitignore  .gitmodules  .mcp.json  ARCH.md  CLAUDE.md  CODE43_HANDOFF_FOR_CODEX.md  DISPLAY.md  DISPLAY_WAY_FORWARD_2026_06_07.md  HOST.md  ICD.md  KMD.md  LOOKING_GLASS_HELIOS_2026_06_08.md  OVERVIEW.md  PHASE7_DISPLAY_HANDOVER.md  SYSTEM_CLASS_REFOCUS_2026_06_07.md  TOOLCHAIN.md  TRANSPORT.md
.claude/memory/: system-class-refocus-2026-06-07.md
host/: Cargo.toml
host/src/: main.rs
icd/: PHASE5_HANDOVER.md  PHASE6_WSI_HANDOVER.md
icd/win-build/: README.md  mingw-native.ini
kmd/: Cargo.make.toml  Cargo.toml  build.rs  helios_kmd.inx  rust-toolchain.toml
kmd/.cargo/: config.toml
kmd/src/: adapter.rs  device.rs  diag.rs  dod.rs  dxgk.rs  error.rs  ioctl.rs  lib.rs  mapping.rs  pnp.rs  vidpn.rs  wdf.rs
kmd/src/ddi/: add_device.rs  build_paging_buffer.rs  create_allocation.rs  escape.rs  interrupt.rs  mod.rs  query_adapter_info.rs  start_device.rs  submit_command.rs
kmd/src/virtio/: config.rs  gpu.rs  hal.rs  mod.rs
probe/src/: main.rs
protocol/: Cargo.toml
protocol/src/: escape.rs  features.rs  ioctl.rs  lib.rs  virtio_gpu.rs
tools/: install-helios-icd.cmd  install-helios-icd.ps1  launch-doom-diagnostic.cmd  launch-helios-gtk.sh  win11-domain.bak.xml  win11-domain.new.xml
tools/win-mcp/: Cargo.toml
tools/win-mcp/src/: main.rs
umd/: Cargo.toml
umd/src/: lib.rs
