[package]
name = "helios_host"
version = "0.1.0"
edition = "2021"
description = "Helios vGPU host-side diagnostics: query the running QEMU VM over QMP."

[[bin]]
name = "helios-host"
path = "src/main.rs"

[dependencies]
# Proper QEMU QMP bindings (arcnmx/qapi-rs) — no hand-rolled protocol.
qapi = { version = "0.15", features = ["qmp"] }
# Shared wire definitions — virtio-gpu PCI ids, so the device match stays in sync.
helios_protocol = { path = "../protocol" }

[profile.release]
opt-level = 3
lto = true
